# Exemplar

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  VERSIONS  autogen.sh  build_debs.sh.in  configure.ac
debian/: changelog.src  control.src  copyright  postinst  postrm  prerm  rules
fixtures/: Makefile.am  extended_all.conf  extended_part1.conf  extended_part2.conf  extended_part3.conf  legacy.conf  unified1.conf  unified2.conf  unified3.conf  unified4.conf
src/: Makefile.am
src/lib/: Makefile.am  cmdswitch.cpp  cmdswitch.h  profile.cpp  profile.h  sendmail.cpp  sendmail.h
src/tests/: Makefile.am  dump_profile.cpp  dump_profile.h  profile_tests.cpp  profile_tests.h  run_tests.cpp  run_tests.h  test_methods.cpp  test_methods.h  v1_tests.cpp  v1_tests.h
